--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "Mask_RCNN"]
+	path = Mask_RCNN
+	url = https://github.com/matterport/Mask_RCNN.git
 [submodule "client"]
 	path = client
-	url = git@github.com:Matts966/gaming-next.git
+	url = https://github.com/Matts966/gaming-next.git
