--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -7,7 +7,8 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location ~ /server {
-        proxy_pass http://0.0.0.0:5000; 
+        proxy_pass http://ec2-54-203-205-102.us-west-2.compute.amazonaws.com:5000;
+	#proxy_pass http://0.0.0.0:5000; 
         client_max_body_size 10M;
     }
 
