--- a/frontend/nginx/conf.d/default.conf
+++ b/frontend/nginx/conf.d/default.conf
@@ -1,3 +1,6 @@
+upstream backend {
+    server api:5000;
+}
 server {
     listen       80;
     listen  [::]:80;
@@ -7,8 +10,9 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location ~ /server {
-        #proxy_pass http://ec2-54-203-205-102.us-west-2.compute.amazonaws.com:5000;
-	proxy_pass http://192.168.1.50:5000; 
+        proxy_pass http://backend;
+        proxy_read_timeout 10m;
+        proxy_connect_timeout 10m;
         client_max_body_size 10M;
     }
 
