update k8s configuration yaml

--- a/manifests/api.yaml
+++ b/manifests/api.yaml
@@ -24,7 +24,7 @@ spec:
         io.kompose.service: api
     spec:
       containers:
-      - image: manimanimani/backend
+      - image: ghcr.io/rickyban/gaming-hoge-generator/backend
         imagePullPolicy: ""
         name: api
         ports:
@@ -34,3 +34,24 @@ spec:
       serviceAccountName: ""
       volumes: null
 status: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    kompose.cmd: kompose convert -f docker-compose.yml
+    kompose.version: 1.21.0 (992df58d8)
+  creationTimestamp: null
+  labels:
+    io.kompose.service: api
+  name: api
+spec:
+  ports:
+  - name: "api"
+    port: 5000
+    targetPort: 5000
+  type: ClusterIP
+  selector:
+    io.kompose.service: api
+status:
+  loadBalancer: {}
