--- a/manifests/web.yaml
+++ b/manifests/web.yaml
@@ -1,3 +1,22 @@
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    kompose.cmd: kompose convert -f docker-compose.yml
+    kompose.version: 1.21.0 (992df58d8)
+  creationTimestamp: null
+  labels:
+    io.kompose.service: web
+  name: web
+spec:
+  ports:
+  - name: "80"
+    port: 80
+    targetPort: 80
+  type: NodePort
+  selector:
+    io.kompose.service: web
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -24,7 +43,7 @@ spec:
         io.kompose.service: web
     spec:
       containers:
-      - image: manimanimani/frontend
+      - image: ghcr.io/rickyban/gaming-hoge-generator/frontend
         imagePullPolicy: ""
         name: web
         ports:
@@ -34,3 +53,16 @@ spec:
       serviceAccountName: ""
       volumes: null
 status: {}
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+        name: web-ingress
+        annotations:
+                nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+spec:
+        defaultBackend:
+                  service:
+                          name: web
+                          port:
+                                  number: 80
