--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "backend/Mask_RCNN"]
 	path = backend/Mask_RCNN
 	url = https://github.com/matterport/Mask_RCNN.git
-[submodule "dns-register"]
-	path = dns-register
-	url = https://github.com/Matts966/dns-register
+[submodule "kubernetes-cloudflare-syncer"]
+	path = kubernetes-cloudflare-syncer
+	url = https://github.com/Matts966/kubernetes-cloudflare-syncer
